rust/crates/cli/tests/it/snapshots/shortcodes_simple.snap
---
source: crates/cli/tests/it/embedded.rs
expression: "format!(\"{head}[instagram blockquote]{tail}\")"
---
<head>
<meta property="og:url" content="https://example.org/embedded/shortcodes/">
  <meta property="og:site_name" content="Testsite">
  <meta property="og:title" content="Shortcodes">
  <meta property="og:description" content="Fig titleA caption Photo by me
Only caption
Details A basic collapsible section.
Custom summary Inner.
Second paragraph.
1package main 2func main() {} echo hi View this post on Instagram Owl bet you&#39;ll lose this staring contest 🦉">
  <meta property="og:locale" content="en">
  <meta property="og:type" content="article">
    <meta property="article:section" content="embedded">
    <meta property="article:published_time" content="2022-03-05T00:00:00+00:00">
    <meta property="article:modified_time" content="2022-03-05T00:00:00+00:00">
    <meta property="og:image" content="https://example.org/img/site.png">
      <meta property="og:see_also" content="https://example.org/embedded/bundle/">
      <meta property="og:see_also" content="https://example.org/embedded/hooks/">
    <meta property="fb:app_id" content="12345">


  <meta name="twitter:card" content="summary_large_image">
  <meta name="twitter:image" content="https://example.org/img/site.png">
  <meta name="twitter:title" content="Shortcodes">
  <meta name="twitter:description" content="Fig titleA caption Photo by me
Only caption
Details A basic collapsible section.
Custom summary Inner.
Second paragraph.
1package main 2func main() {} echo hi View this post on Instagram Owl bet you&#39;ll lose this staring contest 🦉">
  <meta name="twitter:site" content="@neohugo">


  <meta itemprop="name" content="Shortcodes">
  <meta itemprop="description" content="Fig titleA caption Photo by me
Only caption
Details A basic collapsible section.
Custom summary Inner.
Second paragraph.
1package main 2func main() {} echo hi View this post on Instagram Owl bet you&#39;ll lose this staring contest 🦉">
  <meta itemprop="datePublished" content="2022-03-05T00:00:00+00:00">
  <meta itemprop="dateModified" content="2022-03-05T00:00:00+00:00">
  <meta itemprop="wordCount" content="149">
  <meta itemprop="image" content="https://example.org/img/site.png">
  <meta itemprop="keywords" content="S1">


      <script async src="https://www.googletagmanager.com/gtag/js?id=G-ABC123"></script>
      <script>
        var doNotTrack = false;
        if (false) {
          var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
          var doNotTrack = (dnt == "1" || dnt == "yes");
        }
        if (!doNotTrack) {
          window.dataLayer = window.dataLayer || [];
          function gtag(){dataLayer.push(arguments);}
          gtag('js', new Date());
          gtag('config', 'G-ABC123');
        }
      </script>
</head>
<main><figure><img src="https://example.org/img/logo.png"
    alt="Logo"><!-- Closing img tag -->
</figure>

<figure class="fig"><a href="https://example.com/" target="_blank" rel="noopener"><img src="bundle/feature.png"
    alt="A caption" width="10" height="20" loading="lazy"><!-- Closing img tag --></a><figcaption>
      <h4>Fig title</h4><p>A <em>caption</em>
          <a href="https://me.example.org/">Photo by <strong>me</strong></a></p>
    </figcaption>
</figure>

<figure><img src="https://cdn.example.org/x.png"
    alt="Only caption"><!-- Closing img tag --><figcaption>
      <p>Only <a href="https://example.org/about/">caption</a></p>
    </figcaption>
</figure>


<details>
  <summary>Details</summary>
  <p>A basic <em>collapsible</em> section.</p>
</details>


<details class="dc" name="grp" open title="T">
  <summary>Custom <strong>summary</strong></summary>
  <p>Inner.</p>
<p>Second paragraph.</p>
</details>

<div class="highlight"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;display:grid;"><code class="language-go" data-lang="go"><span style="display:flex;"><span style="white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#7f7f7f">1</span><span><span style="color:#f92672">package</span> <span style="color:#a6e22e">main</span>
</span></span><span style="display:flex; background-color:#3c3d38"><span style="white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#7f7f7f">2</span><span><span style="color:#66d9ef">func</span> <span style="color:#a6e22e">main</span>() {}</span></span></code></pre></div>
<div class="highlight"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>  echo hi</span></span></code></pre></div>
<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
      <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; fullscreen" loading="eager" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/0RKpf3rK57I?autoplay=0&amp;controls=1&amp;end=0&amp;loop=0&amp;mute=0&amp;start=0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" title="YouTube video"></iframe>
    </div>

<div class="yt">
      <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" loading="lazy" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/0RKpf3rK57I?autoplay=1&amp;controls=0&amp;end=60&amp;loop=1&amp;mute=1&amp;playlist=0RKpf3rK57I&amp;start=30" title="My video"></iframe>
    </div>

<style>
.__h_video {
   position: relative;
   padding-bottom: 56.23%;
   height: 0;
   overflow: hidden;
   width: 100%;
   background: #000;
}
.__h_video img {
   width: 100%;
   height: auto;
   color: #000;
}
.__h_video .play {
   height: 72px;
   width: 72px;
   left: 50%;
   top: 50%;
   margin-left: -36px;
   margin-top: -36px;
   position: absolute;
   cursor: pointer;
}
</style><div class="s_video_simple __h_video">
          <a href="https://vimeo.com/55073825" rel="noopener" target="_blank">
            <img src="https://i.vimeocdn.com/video/452001751-8216e0571c_295x166.jpg" srcset="https://i.vimeocdn.com/video/452001751-8216e0571c_295x166.jpg 1x, https://i.vimeocdn.com/video/452001751-8216e0571c.jpg 2x" alt="Sample &quot;video&quot; &amp; more">
            <div class="play">
              <svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 61 61"><circle cx="30.5" cy="30.5" r="30.5" opacity=".8" fill="#000"></circle><path d="M25.3 19.2c-2.1-1.2-3.8-.2-3.8 2.2v18.1c0 2.4 1.7 3.4 3.8 2.2l16.6-9.1c2.1-1.2 2.1-3.2 0-4.4l-16.6-9z" fill="#fff"></path></svg>
            </div>
          </a>
        </div>

<div class="s_video_simple foo bar">
          <a href="https://vimeo.com/55073825" rel="noopener" target="_blank">
            <img src="https://i.vimeocdn.com/video/452001751-8216e0571c_295x166.jpg" srcset="https://i.vimeocdn.com/video/452001751-8216e0571c_295x166.jpg 1x, https://i.vimeocdn.com/video/452001751-8216e0571c.jpg 2x" alt="Sample &quot;video&quot; &amp; more">
            <div class="play">
              <svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 61 61"><circle cx="30.5" cy="30.5" r="30.5" opacity=".8" fill="#000"></circle><path d="M25.3 19.2c-2.1-1.2-3.8-.2-3.8 2.2v18.1c0 2.4 1.7 3.4 3.8 2.2l16.6-9.1c2.1-1.2 2.1-3.2 0-4.4l-16.6-9z" fill="#fff"></path></svg>
            </div>
          </a>
        </div>

[instagram blockquote]
<style type="text/css">
      .twitter-tweet {
        font:
          14px/1.45 -apple-system,
          BlinkMacSystemFont,
          "Segoe UI",
          Roboto,
          Oxygen-Sans,
          Ubuntu,
          Cantarell,
          "Helvetica Neue",
          sans-serif;
        border-left: 4px solid #2b7bb9;
        padding-left: 1.5em;
        color: #555;
      }
      .twitter-tweet a {
        color: #2b7bb9;
        text-decoration: none;
      }
      blockquote.twitter-tweet a:hover,
      blockquote.twitter-tweet a:focus {
        text-decoration: underline;
      }
    </style><blockquote class="twitter-tweet"><p lang="en" dir="ltr">Owl bet you&#39;ll lose this staring contest 🦉</p>&mdash; San Diego Zoo (@sandiegozoo) <a href="https://twitter.com/sandiegozoo/status/1453110110599868418">October 26, 2021</a></blockquote>

<p>Param: blue / deep / Site &lt;b&gt;description&lt;/b&gt; &amp; more.</p>
<p>Ref: https://example.org/about/ https://example.org/posts/one/ https://example.org/nn/om/ https://example.org/posts/index.xml /about/ /embedded/hooks/ /first-post/ /posts/index.xml.</p>
</main>
